# user-role-service

./: Cargo.toml  config.yaml
src/: main.rs
src/controllers/: user_controller.rs
src/db/: db.rs
src/errors/: app_error.rs
src/models/: config_model.rs  mod.rs  role_model.rs  user_model.rs
src/routes/: mod.rs  user_router.rs
src/utils/: mod.rs  utils.rs  validator_utils.rs
