[package]
name = "user-role-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.8", features = ["multipart"] }
axum-extra = { version = "0.12.3", features = ["cookie"] }
axum-test = "18.4.1"
chrono = { version = "0.4.42", features = ["serde", "std"] }
config = "0.15.19"
futures = "0.3.31"
http = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["hmac", "rust_crypto"] }
rand_core = "0.9.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "chrono", "mysql"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
